expo_web_fixed.log
env: load .env.local .env
env: export SUPABASE_URL SUPABASE_ANON_KEY SUPABASE_SERVICE_ROLE_KEY
Starting project at /home/tunga/HUB/BUs/flash_report_supabase
Starting Metro Bundler
warning: Bundler cache is empty, rebuilding (this may take a minute)
Skipping dependency validation in offline mode
Waiting on http://localhost:8081
Logs for your project will appear below.
Web ./index.ts ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web ./index.ts ▓▓░░░░░░░░░░░░░░ 16.0% ( 99/392)
Web ./index.ts ▓▓▓▓▓▓░░░░░░░░░░ 42.1% (528/814)
Web ./index.ts ▓▓▓▓▓▓▓▓▓▓▓░░░░░ 72.3% ( 882/1037)
Web ./index.ts ▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░ 92.6% (1281/1332)
Web Bundled 14857ms index.ts (1363 modules)
 LOG  [web] Logs will appear in the browser console
 ERROR  SyntaxError: /home/tunga/HUB/BUs/flash_report_supabase/src/polyfill.ts: 'import' and 'export' may only appear at the top level. (10:4)

   8 |     console.log('[Polyfill] Web environment detected, skipping polyfill');
   9 |     // Export something to prevent tree-shaking
> 10 |     export const _polyfill = true;
     |     ^
  11 |     return;
  12 |   }
  13 |
    at constructor (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:365:19)
    at TypeScriptParserMixin.raise (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:6599:19)
    at TypeScriptParserMixin.parseStatementContent (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12871:18)
    at TypeScriptParserMixin.parseStatementContent (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:9508:18)
    at TypeScriptParserMixin.parseStatementLike (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementListItem (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12747:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:13316:61)
    at TypeScriptParserMixin.parseBlockBody (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseBlock (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:13297:10)
    at TypeScriptParserMixin.parseStatementContent (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12858:21)
    at TypeScriptParserMixin.parseStatementContent (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:9508:18)
    at TypeScriptParserMixin.parseStatementLike (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementOrSloppyAnnexBFunctionDeclaration (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12757:17)
    at TypeScriptParserMixin.parseIfStatement (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:13130:28)
    at TypeScriptParserMixin.parseStatementContent (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12796:21)
    at TypeScriptParserMixin.parseStatementContent (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:9508:18)
    at TypeScriptParserMixin.parseStatementLike (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseModuleItem (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12744:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:13316:36)
    at TypeScriptParserMixin.parseBlockBody (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseProgram (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12622:10)
    at TypeScriptParserMixin.parseTopLevel (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:12612:25)
    at TypeScriptParserMixin.parse (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:14488:25)
    at TypeScriptParserMixin.parse (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:10126:18)
    at parse (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/parser/lib/index.js:14501:26)
    at parser (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at evaluateSync (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/gensync/index.js:251:28)
    at sync (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/gensync/index.js:89:14)
    at stopHiding - secret - don't use this - v1 (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at Object.transformSync (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/@babel/core/lib/transform.js:40:76)
    at parseWithBabel (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/expo/node_modules/@expo/metro-config/build/transformSync.js:75:18)
    at transformSync (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/expo/node_modules/@expo/metro-config/build/transformSync.js:54:16)
    at Object.transform (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/expo/node_modules/@expo/metro-config/build/babel-transformer.js:127:58)
    at transformJSWithBabel (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/expo/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:468:47)
    at Object.transform (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/expo/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:583:12)
    at Object.transform (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/expo/node_modules/@expo/metro-config/build/transform-worker/transform-worker.js:178:19)
    at transformFile (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/metro/src/DeltaBundler/Worker.flow.js:67:36)
    at Object.transform (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/metro/src/DeltaBundler/Worker.flow.js:42:10)
    at execFunction (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/jest-worker/build/workers/processChild.js:149:17)
    at execHelper (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/jest-worker/build/workers/processChild.js:137:5)
    at execMethod (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/jest-worker/build/workers/processChild.js:140:5)
    at process.messageListener (/home/tunga/HUB/BUs/flash_report_supabase/node_modules/jest-worker/build/workers/processChild.js:44:7)
    at process.emit (node:events:518:28)
Web ./index.ts ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web Bundled 77ms index.ts (1 module)
 LOG  [web] Logs will appear in the browser console
Web ./index.ts ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web Bundled 70ms index.ts (1 module)
 LOG  [web] Logs will appear in the browser console
Web ./index.ts ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web Bundled 90ms index.ts (1 module)
 LOG  [web] Logs will appear in the browser console
Web ./index.ts ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web Bundled 94ms index.ts (1 module)
Web Bundled 160ms index.ts (1 module)
 LOG  [web] Logs will appear in the browser console
 LOG  [web] Logs will appear in the browser console
